Revert Supabase Auth rewrite
